fixing visibility of upgrade info

--- a/IncrementalConstruction/stylesheet_1.css
+++ b/IncrementalConstruction/stylesheet_1.css
@@ -103,7 +103,7 @@ left: 53.7vw;
 top: 14.7vw;
 color: #9a9a9c;
 font-size: 0.75vw;
-visibility: hidden;
+visibility: visible;
 }
 
 /* Reputation Building Totals (GD1, VS2, OT3) */
